Support page param in list user requests and filter by both user id and display name
